--- a/client/src/components/PostCard.css
+++ b/client/src/components/PostCard.css
@@ -1,4 +1,5 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@400&family=Poppins:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Prata&display=swap');
 .postcard_main{
     display: flex;
     background-color: #efefef;
@@ -10,13 +11,12 @@
 }
 .postcard_title{
     background-color: white;
+    font-family: 'Prata', serif;
     padding: 10px;
 
 }
 .postcard_title_main{
     font-size: 30px;
-    font-family: 'Courier New', Courier, monospace;
-    padding-bottom: 15px;
     text-align: center;
 }
 .user_section{
@@ -34,9 +34,9 @@
 }
 
 .postcard_right{
-    overflow-y: scroll;
     overflow-x: hidden;
-    height: 100%;
+    /* height: 100%; */
+    position: relative;
 }
 .postcard_input{
     z-index: 1;
@@ -45,12 +45,14 @@
     height: 45px;
     margin-right: 15px;
     width: 100%;
+    /* position: absolute; */
 }
 .postcard_actual_input{
     background-color: #efefef;
     height: 100%;
     margin-left: 10px;
     width: 80%;
+    z-index: 100;
 
 }
 .postcard_actual_input:focus{
@@ -58,18 +60,33 @@
 }
 .postcard_content{
     margin-left: 10px;
+    overflow-y: scroll;
 }
 .postcard_btn{
     color: #0088fe;
     font-weight: 500;
     text-align: center;
     width: 15%;
+    z-index: 2;
 }
 .postcard_second_sec{
     display: grid;
-    position: relative;
-    height: 500px;
     grid-template-columns: 1.4fr 1fr;
-    align-items: center;
     overflow: hidden;
+}
+
+@media screen and (max-width:800px) {
+    .postcard_second_sec{
+        grid-template-columns: 1fr;
+        height: auto;
+    }
+}
+
+@media screen and (max-width:500px) {
+    .postcard_title_main{
+        font-size: 20px;
+    }
+    .user_section{
+        font-size: 10px;
+    }
 }
