--- a/client/src/components/PostCard.css
+++ b/client/src/components/PostCard.css
@@ -31,6 +31,7 @@
 }
 .postcard_img{
     width: 100%;
+    margin: auto;
 }
 
 .postcard_right{
@@ -61,6 +62,7 @@
 .postcard_content{
     margin-left: 10px;
     overflow-y: scroll;
+    max-height: 300px;
 }
 .postcard_btn{
     color: #0088fe;
@@ -74,11 +76,24 @@
     grid-template-columns: 1.4fr 1fr;
     overflow: hidden;
 }
+.comment_box{
+    display: grid;
+    grid-template-columns:1fr 5fr;
+    gap: 10px;
+}
+.comment_box_avatar{
+    height: 20px;
+}
+
 
 @media screen and (max-width:800px) {
     .postcard_second_sec{
         grid-template-columns: 1fr;
         height: auto;
+    }
+    .postcard_content{
+        height: 200px;
+        overflow-y: scroll;
     }
 }
 
@@ -86,6 +101,7 @@
     .postcard_title_main{
         font-size: 20px;
     }
+
     .user_section{
         font-size: 10px;
     }
